--- a/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
+++ b/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
@@ -61,7 +61,7 @@
         <div class="col-md-2">
           <input type="text" class="form-control form-control-sm" id="osszeg"
                  readonly="true"
-                 [(ngModel)]="bizonylatservice.Dto[bizonylatservice.DtoSelectedIndex].BRUTTO" name="osszeg">
+                 [(ngModel)]="bizonylatservice.Dto[bizonylatservice.DtoSelectedIndex].Brutto" name="osszeg">
         </div>
       </div>
       <div class="row no-gutters editform-row">
