--- a/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
+++ b/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
@@ -1,8 +1,9 @@
 <div class="alapkeret">
   <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}}</h5>
   <div style="margin-bottom: 10px">
-    <div style="font-size: smaller">{{bizonylatservice.Dto[bizonylatservice.DtoSelectedIndex].BIZONYLATKOD}} {{bizonylatservice.Dto[bizonylatservice.DtoSelectedIndex].UGYFELNEV}}</div>
-    <div style="font-size: smaller">{{bizonylatservice.Dto[bizonylatservice.DtoSelectedIndex].BIZONYLATSZAM}}</div>
+    <div style="font-size: smaller">{{bizonylatservice.Dto[bizonylatservice.DtoSelectedIndex].BIZONYLATKOD}}
+      {{bizonylatservice.Dto[bizonylatservice.DtoSelectedIndex].Ugyfelnev}}</div>
+    <div style="font-size: smaller">{{bizonylatservice.Dto[bizonylatservice.DtoSelectedIndex].Bizonylatszam}}</div>
   </div>
   <div>
     <nav>
