--- a/src/app/bizonylat/bizonylat-tetel-szerkesztes/bizonylat-tetel-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-tetel-szerkesztes/bizonylat-tetel-szerkesztes.component.html
@@ -9,7 +9,7 @@
     <div class="col-md-1">
       <select type="text" class="form-control form-control-sm" name="termekdijas"
               [disabled]="!bizonylatservice.szvesz"
-              [(ngModel)]="bizonylatservice.TetelDtoEdited.TERMEKDIJAS"
+              [(ngModel)]="bizonylatservice.TetelDtoEdited.Termekdijas"
               (change)="tetelcalc($event)">
         <option value="false">Nem</option>
         <option value="true">Igen</option>
@@ -23,7 +23,7 @@
     <div class="col-md-1">
       <select type="text" class="form-control form-control-sm" name="kozvetitett"
               [disabled]="!bizonylatservice.szvesz"
-              [(ngModel)]="bizonylatservice.TetelDtoEdited.KOZVETITETTSZOLGALTATAS">
+              [(ngModel)]="bizonylatservice.TetelDtoEdited.Kozvetitettszolgaltatas">
         <option value="false">Nem</option>
         <option value="true">Igen</option>
       </select>
@@ -36,7 +36,7 @@
     <div class="col-md-1">
       <select type="text" class="form-control form-control-sm" name="eloleg"
               [disabled]="!bizonylatservice.szvesz"
-              [(ngModel)]="bizonylatservice.TetelDtoEdited.EZELOLEG">
+              [(ngModel)]="bizonylatservice.TetelDtoEdited.Ezeloleg">
         <option value="false">Nem</option>
         <option value="true">Igen</option>
       </select>
@@ -48,7 +48,7 @@
     </div>
     <div class="col-md-4">
       <input type="text" class="form-control form-control-sm" id="megnevezes" name="megnevezes"
-             [(ngModel)]="bizonylatservice.TetelDtoEdited.MEGNEVEZES"
+             [(ngModel)]="bizonylatservice.TetelDtoEdited.Megnevezes"
              maxlength="100" required autocomplete="off" style="background-color: aquamarine">
     </div>
     <div class="col-md-1">
@@ -62,7 +62,7 @@
     </div>
     <div class="col-md-4">
       <input type="text" class="form-control form-control-sm" id="megjegyzes" name="megjegyzes"
-             [(ngModel)]="bizonylatservice.TetelDtoEdited.MEGJEGYZES"
+             [(ngModel)]="bizonylatservice.TetelDtoEdited.Megjegyzes"
              autocomplete="off">
     </div>
   </div>
@@ -72,7 +72,7 @@
     </div>
     <div class="col-md-2">
       <input type="number" class="form-control form-control-sm" id="mennyiseg" name="mennyiseg"
-             [(ngModel)]="bizonylatservice.TetelDtoEdited.MENNYISEG"
+             [(ngModel)]="bizonylatservice.TetelDtoEdited.Mennyiseg"
              (focusout)="tetelcalc($event)"
              required min="0">
     </div>
@@ -83,7 +83,7 @@
     </div>
     <div class="col-md-1">
       <input type="text" class="form-control form-control-sm" id="me" name="me"
-             [(ngModel)]="bizonylatservice.TetelDtoEdited.ME"
+             [(ngModel)]="bizonylatservice.TetelDtoEdited.Me"
              maxlength="10" required autocomplete="off" style="background-color: aquamarine">
     </div>
     <div class="col-md-1">
@@ -97,7 +97,7 @@
     </div>
     <div class="col-md-4 input-group">
       <input type="number" class="form-control form-control-sm" id="egysegar" name="egysegar"
-             [(ngModel)]="bizonylatservice.TetelDtoEdited.EGYSEGAR"
+             [(ngModel)]="bizonylatservice.TetelDtoEdited.Egysegar"
              (focusout)="tetelcalc($event)"
              required>
       <button class="btn btn-sm btn-outline-primary" (click)="bruttobol()"
@@ -112,7 +112,7 @@
     </div>
     <div class="col-md-1">
       <input type="text" class="form-control form-control-sm" id="afakulcs" name="afakulcs"
-             [(ngModel)]="bizonylatservice.TetelDtoEdited.AFAKULCS"
+             [(ngModel)]="bizonylatservice.TetelDtoEdited.Afakulcs"
              maxlength="10" required autocomplete="off" style="background-color: aquamarine">
     </div>
     <div class="col-md-1">
@@ -126,7 +126,7 @@
     </div>
     <div class="col-md-2">
       <input type="number" class="form-control form-control-sm" id="tomegkg" name="tomegkg"
-             [(ngModel)]="bizonylatservice.TetelDtoEdited.TOMEGKG"
+             [(ngModel)]="bizonylatservice.TetelDtoEdited.Tomegkg"
              (focusout)="tetelcalc($event)"
              min="0">
     </div>
@@ -137,7 +137,7 @@
     </div>
     <div class="col-md-2">
       <input type="number" class="form-control form-control-sm" id="netto" name="netto" readonly="true"
-             [(ngModel)]="bizonylatservice.TetelDtoEdited.NETTO">
+             [(ngModel)]="bizonylatservice.TetelDtoEdited.Netto">
     </div>
   </div>
   <div class="row no-gutters editform-row">
@@ -146,7 +146,7 @@
     </div>
     <div class="col-md-2">
       <input type="text" class="form-control form-control-sm" id="termekdijkt" name="termekdijkt"
-             [(ngModel)]="bizonylatservice.TetelDtoEdited.TERMEKDIJKT"
+             [(ngModel)]="bizonylatservice.TetelDtoEdited.Termekdijkt"
              maxlength="10" autocomplete="off" style="background-color: aquamarine">
     </div>
     <div class="col-md-1">
@@ -164,7 +164,7 @@
     </div>
     <div class="col-md-2">
       <input type="number" class="form-control form-control-sm" id="afa" name="afa" readonly="true"
-             [(ngModel)]="bizonylatservice.TetelDtoEdited.AFA">
+             [(ngModel)]="bizonylatservice.TetelDtoEdited.Afa">
     </div>
   </div>
   <div class="row no-gutters editform-row">
@@ -173,7 +173,7 @@
     </div>
     <div class="col-md-3">
       <input type="text" class="form-control form-control-sm" id="termekdijmegnevezes" name="termekdijmegnevezes"
-             [(ngModel)]="bizonylatservice.TetelDtoEdited.TERMEKDIJMEGNEVEZES"
+             [(ngModel)]="bizonylatservice.TetelDtoEdited.Termekdijmegnevezes"
              readonly="true" autocomplete="off">
     </div>
     <div class="col-md-2">
@@ -183,7 +183,7 @@
     </div>
     <div class="col-md-2">
       <input type="number" class="form-control form-control-sm" id="brutto" name="brutto" readonly="true"
-             [(ngModel)]="bizonylatservice.TetelDtoEdited.BRUTTO">
+             [(ngModel)]="bizonylatservice.TetelDtoEdited.Brutto">
     </div>
   </div>
   <div class="row no-gutters editform-row">
@@ -192,7 +192,7 @@
     </div>
     <div class="col-md-2">
       <input type="number" class="form-control form-control-sm" id="termekdijegysegar" name="termekdijegysegar"
-             [(ngModel)]="bizonylatservice.TetelDtoEdited.TERMEKDIJEGYSEGAR"
+             [(ngModel)]="bizonylatservice.TetelDtoEdited.Termekdijegysegar"
              (focusout)="tetelcalc($event)"
              readonly="true">
     </div>
@@ -203,7 +203,7 @@
     </div>
     <div class="col-md-2">
       <input type="number" class="form-control form-control-sm" id="terekdijabruttoarbol" name="terekdijabruttoarbol"
-             [(ngModel)]="bizonylatservice.TetelDtoEdited.TERMEKDIJ"
+             [(ngModel)]="bizonylatservice.TetelDtoEdited.Termekdij"
              readonly="true">
     </div>
   </div>
