--- a/src/app/irat/dokumentum/dokumentum-egy/dokumentum-egy.component.html
+++ b/src/app/irat/dokumentum/dokumentum-egy/dokumentum-egy.component.html
@@ -1,6 +1,6 @@
 <div class="alapkeret">
   <h5>{{dokumentumservice.cim}}</h5>
-  <!--<h6 *ngIf="dokumentumservice.DtoSelectedIndex !== -1">{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].MEGJEGYZES}}</h6>-->
+  <!--<h6 *ngIf="dokumentumservice.DtoMegjegyzesdex !== -1">{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].MEGJEGYZES}}</h6>-->
   <div style="margin-bottom: 10px">
     <div style="font-size: smaller">{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].Dokumentumkod}} {{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].Megjegyzes}}</div>
   </div>
