--- a/src/app/projekt/projekt/projekt-iratminta/projekt-iratminta.component.html
+++ b/src/app/projekt/projekt/projekt-iratminta/projekt-iratminta.component.html
@@ -8,6 +8,9 @@
       <button [disabled]="eppFrissit" (click)="szallitasiszerzodes()" class="btn btn-sm btn-outline-primary navgomb">
         Szállítási szerződés
       </button>
+      <button [disabled]="eppFrissit" (click)="feltetelesszerzodes()" class="btn btn-sm btn-outline-primary navgomb">
+        Feltételes szerződés
+      </button>
       <button [disabled]="eppFrissit" (click)="munkalap()" class="btn btn-sm btn-outline-primary navgomb">
         Munkalap
       </button>
@@ -15,13 +18,13 @@
         Elégedettségi felmérés
       </button>
       <button [disabled]="eppFrissit" (click)="elmuemasz()" class="btn btn-sm btn-outline-primary navgomb">
-        Elmű/Émász készrejelentés
+        ELMŰ-ÉMÁSZ készrejelentés
       </button>
       <button [disabled]="eppFrissit" (click)="eon()" class="btn btn-sm btn-outline-primary navgomb">
-        Eon készrejelentés
+        E.ON készrejelentés
       </button>
       <button [disabled]="eppFrissit" (click)="demasz()" class="btn btn-sm btn-outline-primary navgomb">
-        Démász készrejelentés
+        NKM készrejelentés
       </button>
     </nav>
   </div>
