--- a/src/app/felhasznalo/felhasznalo-egy/felhasznalo-egy.component.html
+++ b/src/app/felhasznalo/felhasznalo-egy/felhasznalo-egy.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret">
   <h5>{{felhasznaloservice.cim}}</h5>
   <div style="margin-bottom: 10px">
-    <div style="font-size: smaller">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].NEV}}</div>
+    <div style="font-size: smaller">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].Nev}}</div>
   </div>
   <div>
     <nav>
