--- a/src/app/projekt/projektteendo/projekt-teendo-szerkesztes/projekt-teendo-szerkesztes.component.html
+++ b/src/app/projekt/projektteendo/projekt-teendo-szerkesztes/projekt-teendo-szerkesztes.component.html
@@ -10,7 +10,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="dedikalva"
                autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="projektteendoservice.DtoEdited.DEDIKALVA" name="dedikalva">
+               [(ngModel)]="projektteendoservice.DtoEdited.Dedikalva" name="dedikalva">
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="FelhasznaloZoom()">...</button>
