--- a/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
+++ b/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret">
   <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}}</h5>
   <div style="margin-bottom: 10px">
-    <div style="font-size: smaller">{{bizonylatservice.Dto[bizonylatservice.DtoSelectedIndex].BIZONYLATKOD}}
+    <div style="font-size: smaller">{{bizonylatservice.Dto[bizonylatservice.DtoSelectedIndex].Bizonylatkod}}
       {{bizonylatservice.Dto[bizonylatservice.DtoSelectedIndex].Ugyfelnev}}</div>
     <div style="font-size: smaller">{{bizonylatservice.Dto[bizonylatservice.DtoSelectedIndex].Bizonylatszam}}</div>
   </div>
