ugyfelter és fotozas web.config router javítása

--- a/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
+++ b/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
@@ -31,7 +31,7 @@
         <div class="col-md-2">
           <input type="text" class="form-control form-control-sm" id="penztar"
                  readonly="true"
-                 [(ngModel)]="bizonylatservice.BizonylatPenztarDto[penztarindex].PENZTAR1" name="penztar">
+                 [(ngModel)]="bizonylatservice.BizonylatPenztarDto[penztarindex].Penztar1" name="penztar">
         </div>
       </div>
       <div class="row no-gutters editform-row">
@@ -41,7 +41,7 @@
         <div class="col-md-1">
           <input type="text" class="form-control form-control-sm" id="penznem"
                  readonly="true"
-                 [(ngModel)]="bizonylatservice.BizonylatPenztarDto[penztarindex].PENZNEM" name="penznem">
+                 [(ngModel)]="bizonylatservice.BizonylatPenztarDto[penztarindex].Penznem" name="penznem">
         </div>
       </div>
       <div class="row no-gutters editform-row">
@@ -51,7 +51,7 @@
         <div class="col-md-2">
           <input type="text" class="form-control form-control-sm" id="egyenleg"
                  readonly="true"
-                 [(ngModel)]="bizonylatservice.BizonylatPenztarDto[penztarindex].EGYENLEG" name="egyenleg">
+                 [(ngModel)]="bizonylatservice.BizonylatPenztarDto[penztarindex].Egyenleg" name="egyenleg">
         </div>
       </div>
       <div class="row no-gutters editform-row">
