--- a/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-reszletek/bizonylat-kifizetes-reszletek.component.html
+++ b/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-reszletek/bizonylat-kifizetes-reszletek.component.html
@@ -8,11 +8,11 @@
     </tr>
     <tr>
       <td class="egylabel">Dátum:</td>
-      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].DATUM | datehun}}</td>
+      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Datum | datehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Összeg:</td>
-      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Datum | number: '1.2-2'}}</td>
+      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Osszeg | number: '1.2-2'}}</td>
     </tr>
     <tr>
       <td class="egylabel">Pénznem:</td>
