--- a/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-list/bizonylat-kifizetes-list.component.html
+++ b/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-list/bizonylat-kifizetes-list.component.html
@@ -24,8 +24,8 @@
     <tr *ngFor="let item of bizonylatkifizetesservice.Dto; let i = index">
       <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
           (click)="setClickedRow(i)">{{item.Kifizeteskod}}</td>
-      <td>{{item.DATUM | datehun}}</td>
-      <td>{{item.Datum | number: '1.2-2'}}</td>
+      <td>{{item.Datum | datehun}}</td>
+      <td>{{item.Osszeg | number: '1.2-2'}}</td>
       <td>{{item.Penznem}}</td>
       <td>{{item.Fizetesimod}}</td>
     </tr>
