--- a/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-szerkesztes/bizonylat-kifizetes-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-szerkesztes/bizonylat-kifizetes-szerkesztes.component.html
@@ -19,7 +19,7 @@
       </div>
       <div class="col-md-2">
         <input type="number" class="form-control form-control-sm" id="osszeg"
-               [(ngModel)]="bizonylatkifizetesservice.DtoEdited.Datum" name="osszeg">
+               [(ngModel)]="bizonylatkifizetesservice.DtoEdited.Osszeg" name="osszeg">
       </div>
     </div>
 
