primitiv-torles nem kell animáció

--- a/src/app/afakulcs/afakulcs-egy/afakulcs-egy.component.html
+++ b/src/app/afakulcs/afakulcs-egy/afakulcs-egy.component.html
@@ -51,6 +51,7 @@
   </ng-container>
 
   <app-errormodal [cim]="afakulcsservice.cim"></app-errormodal>
+  <app-spinner *ngIf="eppFrissit"></app-spinner>
 </div>
 
 
