--- a/src/app/felhasznalo/felhasznalo-egy/felhasznalo-egy.component.html
+++ b/src/app/felhasznalo/felhasznalo-egy/felhasznalo-egy.component.html
@@ -40,20 +40,35 @@ Tevekenyseg = 5
 }-->
 
   <ng-container *ngIf="felhasznaloservice.EgyMode === 1">
-    <app-felhasznalo-reszletek></app-felhasznalo-reszletek>
+    <div [@rowanimation]>
+      <app-felhasznalo-reszletek></app-felhasznalo-reszletek>
+    </div>
   </ng-container>
   <ng-container *ngIf="felhasznaloservice.EgyMode === 2">
-    <app-felhasznalo-torles></app-felhasznalo-torles>
+    <div [@rowanimation]>
+      <app-tetel-torles [cim]="felhasznaloservice.cim"
+                        [eppFrissit]="eppFrissit"
+                        (OkClick)="TorlesOk()"
+                        (CancelClick)="TorlesCancel()">
+      </app-tetel-torles>
+    </div>
   </ng-container>
   <ng-container *ngIf="felhasznaloservice.EgyMode === 3">
-    <app-felhasznalo-szerkesztes></app-felhasznalo-szerkesztes>
+    <div [@rowanimation]>
+      <app-felhasznalo-szerkesztes></app-felhasznalo-szerkesztes>
+    </div>
   </ng-container>
   <ng-container *ngIf="felhasznaloservice.EgyMode === 4">
-    <app-felhasznalo-jelszo></app-felhasznalo-jelszo>
+    <div [@rowanimation]>
+      <app-felhasznalo-jelszo></app-felhasznalo-jelszo>
+    </div>
   </ng-container>
   <ng-container *ngIf="felhasznaloservice.EgyMode === 5">
-    <app-esemenynaplo></app-esemenynaplo>
+    <div [@rowanimation]>
+      <app-esemenynaplo></app-esemenynaplo>
+    </div>
   </ng-container>
 
   <app-errormodal [cim]="felhasznaloservice.cim"></app-errormodal>
+  <app-spinner *ngIf="eppFrissit"></app-spinner>
 </div>
