--- a/src/app/irattipus/irattipus-egy/irattipus-egy.component.html
+++ b/src/app/irattipus/irattipus-egy/irattipus-egy.component.html
@@ -1,6 +1,8 @@
 <div class="alapkeret">
   <h5>{{irattipusservice.cim}}</h5>
-  <h6 *ngIf="irattipusservice.DtoSelectedIndex !== -1">{{irattipusservice.Dto[irattipusservice.DtoSelectedIndex].IRATTIPUS1}}</h6>
+  <div style="margin-bottom: 10px">
+    <div style="font-size: smaller">{{irattipusservice.Dto[irattipusservice.DtoSelectedIndex].Irattipus1}}</div>
+  </div>
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
@@ -28,15 +30,26 @@ Modositas = 3
 }-->
 
   <ng-container *ngIf="irattipusservice.EgyMode === 1">
-    <app-irattipus-reszletek></app-irattipus-reszletek>
+    <div [@rowanimation]>
+      <app-irattipus-reszletek></app-irattipus-reszletek>
+    </div>
   </ng-container>
   <ng-container *ngIf="irattipusservice.EgyMode === 2">
-    <app-irattipus-torles></app-irattipus-torles>
+    <div [@rowanimation]>
+      <app-tetel-torles [cim]="irattipusservice.cim"
+                        [eppFrissit]="eppFrissit"
+                        (OkClick)="TorlesOk()"
+                        (CancelClick)="TorlesCancel()">
+      </app-tetel-torles>
+    </div>
   </ng-container>
   <ng-container *ngIf="irattipusservice.EgyMode === 3">
-    <app-irattipus-szerkesztes></app-irattipus-szerkesztes>
+    <div [@rowanimation]>
+      <app-irattipus-szerkesztes></app-irattipus-szerkesztes>
+    </div>
   </ng-container>
 
   <app-errormodal [cim]="irattipusservice.cim"></app-errormodal>
+  <app-spinner *ngIf="eppFrissit"></app-spinner>
 </div>
 
