--- a/src/app/me/me-egy/me-egy.component.html
+++ b/src/app/me/me-egy/me-egy.component.html
@@ -1,6 +1,8 @@
 <div class="alapkeret">
   <h5>{{meservice.cim}}</h5>
-  <h6 *ngIf="meservice.DtoSelectedIndex !== -1">{{meservice.Dto[meservice.DtoSelectedIndex].ME}}</h6>
+  <div style="margin-bottom: 10px">
+    <div style="font-size: smaller">{{meservice.Dto[meservice.DtoSelectedIndex].Me}}</div>
+  </div>
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
@@ -28,16 +30,27 @@
   }-->
 
   <ng-container *ngIf="meservice.EgyMode === 1">
-    <app-me-reszletek></app-me-reszletek>
+    <div [@rowanimation]>
+      <app-me-reszletek></app-me-reszletek>
+    </div>
   </ng-container>
   <ng-container *ngIf="meservice.EgyMode === 2">
-    <app-me-torles></app-me-torles>
+    <div [@rowanimation]>
+      <app-tetel-torles [cim]="meservice.cim"
+                        [eppFrissit]="eppFrissit"
+                        (OkClick)="TorlesOk()"
+                        (CancelClick)="TorlesCancel()">
+      </app-tetel-torles>
+    </div>
   </ng-container>
   <ng-container *ngIf="meservice.EgyMode === 3">
-    <app-me-szerkesztes></app-me-szerkesztes>
+    <div [@rowanimation]>
+      <app-me-szerkesztes></app-me-szerkesztes>
+    </div>
   </ng-container>
 
   <app-errormodal [cim]="meservice.cim"></app-errormodal>
+  <app-spinner *ngIf="eppFrissit"></app-spinner>
 </div>
 
 
