--- a/src/app/termekdij/termekdij-egy/termekdij-egy.component.html
+++ b/src/app/termekdij/termekdij-egy/termekdij-egy.component.html
@@ -1,6 +1,8 @@
 <div class="alapkeret">
   <h5>{{termekdijservice.cim}}</h5>
-  <h6 *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].TERMEKDIJKT}}</h6>
+  <div style="margin-bottom: 10px">
+    <div style="font-size: smaller">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].Termekdijkt}}</div>
+  </div>
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
@@ -28,15 +30,26 @@
   }-->
 
   <ng-container *ngIf="termekdijservice.EgyMode === 1">
-    <app-termekdij-reszletek></app-termekdij-reszletek>
+    <div [@rowanimation]>
+      <app-termekdij-reszletek></app-termekdij-reszletek>
+    </div>
   </ng-container>
   <ng-container *ngIf="termekdijservice.EgyMode === 2">
-    <app-termekdij-torles></app-termekdij-torles>
+    <div [@rowanimation]>
+      <app-tetel-torles [cim]="termekdijservice.cim"
+                        [eppFrissit]="eppFrissit"
+                        (OkClick)="TorlesOk()"
+                        (CancelClick)="TorlesCancel()">
+      </app-tetel-torles>
+    </div>
   </ng-container>
   <ng-container *ngIf="termekdijservice.EgyMode === 3">
-    <app-termekdij-szerkesztes></app-termekdij-szerkesztes>
+    <div [@rowanimation]>
+      <app-termekdij-szerkesztes></app-termekdij-szerkesztes>
+    </div>
   </ng-container>
 
   <app-errormodal [cim]="termekdijservice.cim"></app-errormodal>
+  <app-spinner *ngIf="eppFrissit"></app-spinner>
 </div>
 
