--- a/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
+++ b/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
@@ -1,6 +1,8 @@
 <div class="alapkeret">
   <h5>{{ugyfelservice.cim}}</h5>
-  <h6 *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Nev}}</h6>
+  <div style="margin-bottom: 10px">
+    <div style="font-size: smaller">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Nev}}, {{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Cim}}</div>
+  </div>
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
@@ -36,22 +38,37 @@ CreateNewLinkLink = 5
     }-->
 
   <ng-container *ngIf="ugyfelservice.EgyMode === 1">
-    <app-ugyfel-reszletek></app-ugyfel-reszletek>
+    <div [@rowanimation]>
+      <app-ugyfel-reszletek></app-ugyfel-reszletek>
+    </div>
   </ng-container>
   <ng-container *ngIf="ugyfelservice.EgyMode === 2">
-    <app-ugyfel-torles></app-ugyfel-torles>
+    <div [@rowanimation]>
+      <app-tetel-torles [cim]="ugyfelservice.cim"
+                        [eppFrissit]="eppFrissit"
+                        (OkClick)="TorlesOk()"
+                        (CancelClick)="TorlesCancel()">
+      </app-tetel-torles>
+    </div>
   </ng-container>
   <ng-container *ngIf="ugyfelservice.EgyMode === 3">
-    <app-ugyfel-szerkesztes></app-ugyfel-szerkesztes>
+    <div [@rowanimation]>
+      <app-ugyfel-szerkesztes></app-ugyfel-szerkesztes>
+    </div>
   </ng-container>
   <ng-container *ngIf="ugyfelservice.EgyMode === 4">
-    <app-ugyfel-projekt></app-ugyfel-projekt>
+    <div [@rowanimation]>
+      <app-ugyfel-projekt></app-ugyfel-projekt>
+    </div>
   </ng-container>
   <ng-container *ngIf="ugyfelservice.EgyMode === 5">
-    <app-ugyfel-ter-link></app-ugyfel-ter-link>
+    <div [@rowanimation]>
+      <app-ugyfel-ter-link></app-ugyfel-ter-link>
+    </div>
   </ng-container>
 
   <app-errormodal [cim]="ugyfelservice.cim"></app-errormodal>
+  <app-spinner *ngIf="eppFrissit"></app-spinner>
 </div>
-<app-spinner *ngIf="eppFrissit"></app-spinner>
+
 
